# playdate_macos

./: .gitignore  CMakeLists.txt  build_macos.sh  cmake_macos.sh  cmake_playdate.sh  readme.md
macos/: AppDelegate.m  CMakeLists.txt  MetalRenderer.h  MetalRenderer.m  MetalShaders.metal  framebuffer.m
playdate/: CMakeLists.txt  main.c
playdate/playdate_macos.pdx/: pdex.dylib  pdxinfo
shared/: framebuffer.h
